# paramsemble-class

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.kiro/specs/elr-package/: design.md  requirements.md  tasks.md
examples/: basic_usage.py  ensemble_method.py  intersect_method.py  sql_generation.py  sql_generation_example.py  venn_method.py
paramsemble_class/: __init__.py
paramsemble_class/core/: __init__.py  baseline_model.py  constituent_model.py  elr_classifier.py  feature_sampler.py
paramsemble_class/ensemble/: __init__.py  ensemble.py  intersect.py  venn.py
paramsemble_class/metrics/: __init__.py  performance.py
paramsemble_class/scoring/: __init__.py  scorer.py
paramsemble_class/sql/: __init__.py  generator.py
paramsemble_class/utils/: __init__.py  model_io.py  validation.py
tests/: __init__.py  conftest.py  test_constituent_model_properties.py  test_elr_classifier.py  test_ensemble_properties.py  test_feature_sampler_properties.py  test_integration.py  test_intersect_properties.py  test_model_io_properties.py  test_performance_metrics_properties.py  test_scorer_properties.py  test_sql_generator.py  test_sql_generator_properties.py  test_validation_properties.py  test_venn_properties.py
